--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@ html, body, #root{
     text-align:center;
 }
 
+.flex-around{
+    display: flex;
+    justify-content: space-around;
+    align-items:center;
+}
+
 .flex-top-center{
     display:flex;
     flex-direction: column;
