--- a/src/Components/TodoArea/CompaniesFunctions/CompanyCouponItem/CompanyCouponItem.css
+++ b/src/Components/TodoArea/CompaniesFunctions/CompanyCouponItem/CompanyCouponItem.css
@@ -1,28 +1,27 @@
 .CompanyCouponItem {
   display: inline-block;
-  background-color: pink;
+  background-color: #242d36;
   margin: 10px;
-  border: 2px dashed white;
+  height: 200px;
+  width: 200px;
+
 }
 
 .CompanyCouponItem img {
   width: 100%;
 }
 
-.card {
+.CompanyCouponItem .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
   margin: auto;
   text-align: center;
   font-family: arial;
+  overflow: hidden;
+  background-color: #1c6e93;
 }
 
-.price {
-  color: grey;
-  font-size: 22px;
-}
-
-.card button {
+.CompanyCouponItem .card button {
   border: none;
   outline: 0;
   padding: 12px;
@@ -34,7 +33,7 @@
   font-size: 18px;
 }
 
-.card button:hover {
+.CompanyCouponItem .card button:hover {
   opacity: 0.7;
 }
 
@@ -42,34 +41,4 @@
   display: flex;
   justify-content: center;
   align-items: center;
-} */
-
-.coupon .link {
-  background-color: aqua;
-} 
-
-.coupon {
-  border: 5px dotted #bbb; /* Dotted border */
-  width: 80%;
-  border-radius: 15px; /* Rounded border */
-  margin: 0 auto; /* Center the coupon */
-  max-width: 600px;
-}
-
-.container {
-  padding: 2px 16px;
-  background-color: #f1f1f1;
-}
-
-.promo {
-  background: #ccc;
-  padding: 3px;
-}
-
-.start {
-  color: green;
-}
-
-.expire {
-  color: red;
 }
