--- a/src/index.css
+++ b/src/index.css
@@ -1,100 +1,114 @@
 html,
 body,
 #root {
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-    padding: auto;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  padding: auto;
 }
-
 
 .flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-/* .flex-row{
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-} */
-
 .flex-around {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.flex-around-top-bottom {
+  display: flex;
+  color: #c5c3c0;
+  background-color: #171a21;
+  justify-content: space-between;
+  padding: 5px 20px 5px 20px;
+  align-items: center;
 }
 
 .flex-top-center {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.flex-top-center-menu-main {
+  display: flex;
+  background-color: #1a2b3d;
+  color: #e5dcdf;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.text-overflow {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .flex-row-non-wrap-list {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .flex-row {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    gap: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 50px;
 }
 
 .link {
-    color: white;
-    margin-bottom: 15px;
-    font-size: 30px;
-    text-decoration: none;
+  color: white;
+  /* margin-bottom: 15px; */
+  font-size: 30px;
+  text-decoration: none;
+  gap: 70px;
 }
 
-
 .link:hover {
-    color: #A27B5C;
-    font-weight: 700;
-    /* font-size: xx-large; */
-    text-decoration: none;
+  color: #a27b5c;
+  font-weight: 700;
+  /* font-size: xx-large; */
+  text-decoration: none;
 }
 
 .button-fail {
-    transition-duration: 0.4s;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: red;
-    font-size: 20px;
+  transition-duration: 0.4s;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: red;
+  font-size: 20px;
 }
 
 .button-fail:hover {
-    background-color: white;
-    /* Green */
+  background-color: white;
+  /* Green */
 }
 
 .button-success {
-    transition-duration: 0.4s;
-    background-color: green;
-    font-family: serif;
-    margin: 20px;
-    font-size: 24px;
+  transition-duration: 0.4s;
+  background-color: green;
+  font-family: serif;
+  margin: 20px;
+  font-size: 24px;
 }
-ז
-.button-success:disabled {
-    transition-duration: 0.4s;
-    background-color: gray;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
-    cursor:not-allowed;
+ז .button-success:disabled {
+  transition-duration: 0.4s;
+  background-color: gray;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 20px;
+  cursor: not-allowed;
 }
 
 .button-success:hover {
-    background-color: lightblue;
+  background-color: lightblue;
 }
